// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getUserCreatedPRListInPeriod > filters pull requests that target a specific branch 1`] = `
[
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-11T12:44:25Z",
    "labels": [
      "scope: docs-infra",
      "security",
    ],
    "mergedAt": "2024-09-30T12:36:38Z",
    "number": 43711,
    "reviewers": [
      "oliviertassinari",
      "oliviertassinari",
    ],
    "title": "[docs-infra] Strengthen CSP",
    "url": "https://github.com/mui/material-ui/pull/43711",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-11T13:30:02Z",
    "labels": [
      "core",
    ],
    "mergedAt": "2024-09-11T20:39:34Z",
    "number": 43712,
    "reviewers": [],
    "title": "[core] Remove /.yarn",
    "url": "https://github.com/mui/material-ui/pull/43712",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-13T17:58:16Z",
    "labels": [
      "component: slider",
      "docs",
    ],
    "mergedAt": "2024-09-15T15:05:26Z",
    "number": 43748,
    "reviewers": [
      "aarongarciah",
    ],
    "title": "[slider][docs] Polish Music player demo",
    "url": "https://github.com/mui/material-ui/pull/43748",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-14T00:04:37Z",
    "labels": [
      "docs",
      "regression 🐛",
      "scope: docs-infra",
    ],
    "mergedAt": "2024-09-16T17:19:10Z",
    "number": 43751,
    "reviewers": [
      "mapache-salvaje",
    ],
    "title": "[docs-infra] Fix Vale config for TypeScript references",
    "url": "https://github.com/mui/material-ui/pull/43751",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-14T13:38:28Z",
    "labels": [
      "docs",
      "regression 🐛",
    ],
    "mergedAt": "2024-09-16T06:41:54Z",
    "number": 43752,
    "reviewers": [
      "siriwatknp",
    ],
    "title": "[docs] Fix MUI Treasury Layout broken links",
    "url": "https://github.com/mui/material-ui/pull/43752",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-14T13:43:03Z",
    "labels": [
      "docs",
      "regression 🐛",
      "v5.x",
    ],
    "mergedAt": "2024-09-16T11:17:55Z",
    "number": 43753,
    "reviewers": [
      "siriwatknp",
    ],
    "title": "[docs] Fix MUI Treasury Layout broken links",
    "url": "https://github.com/mui/material-ui/pull/43753",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-14T14:15:20Z",
    "labels": [
      "bug 🐛",
      "examples",
      "v5.x",
    ],
    "mergedAt": "2024-10-03T11:40:08Z",
    "number": 43755,
    "reviewers": [
      "mnajdova",
    ],
    "title": "[examples] Fix v5 clone example instructions",
    "url": "https://github.com/mui/material-ui/pull/43755",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-15T00:29:26Z",
    "labels": [
      "bug 🐛",
      "core",
    ],
    "mergedAt": "2024-09-17T13:00:19Z",
    "number": 43778,
    "reviewers": [
      "DiegoAndai",
    ],
    "title": "[core] useAutocomplete should have 'use client'",
    "url": "https://github.com/mui/material-ui/pull/43778",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-18T12:15:03Z",
    "labels": [
      "docs",
    ],
    "mergedAt": "2024-09-19T12:10:40Z",
    "number": 43809,
    "reviewers": [
      "michaldudak",
      "michaldudak",
      "oliviertassinari",
    ],
    "title": "[docs] Fix 301 to chromium",
    "url": "https://github.com/mui/material-ui/pull/43809",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-18T16:26:18Z",
    "labels": [
      "docs",
    ],
    "mergedAt": "2024-09-30T18:14:43Z",
    "number": 43812,
    "reviewers": [
      "aarongarciah",
    ],
    "title": "[docs] Format Pigment CSS docs",
    "url": "https://github.com/mui/material-ui/pull/43812",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-19T19:34:40Z",
    "labels": [
      "core",
      "test",
    ],
    "mergedAt": "2024-09-20T11:23:07Z",
    "number": 43820,
    "reviewers": [
      "aarongarciah",
      "mnajdova",
      "sai6855",
    ],
    "title": "[test] Sync React.version parse logic with codebase",
    "url": "https://github.com/mui/material-ui/pull/43820",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-19T22:49:09Z",
    "labels": [
      "website",
    ],
    "mergedAt": "2024-09-28T10:16:12Z",
    "number": 43822,
    "reviewers": [
      "aarongarciah",
    ],
    "title": "[website] Improve Next roles section",
    "url": "https://github.com/mui/material-ui/pull/43822",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-20T20:37:20Z",
    "labels": [
      "website",
    ],
    "mergedAt": "2024-09-21T00:19:36Z",
    "number": 43831,
    "reviewers": [
      "MBilalShafi",
    ],
    "title": "[website] Add 'Row spanning'",
    "url": "https://github.com/mui/material-ui/pull/43831",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2024-09-20T23:47:01Z",
    "labels": [
      "regression 🐛",
      "scope: docs-infra",
    ],
    "mergedAt": "2024-10-02T21:51:40Z",
    "number": 43834,
    "reviewers": [],
    "title": "[docs-infra] Fix link in header regression",
    "url": "https://github.com/mui/material-ui/pull/43834",
  },
]
`;

exports[`getUserCreatedPRListInPeriod > returns pull requests created by the user within the specified date range 1`] = `
[
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-01T00:27:00Z",
    "labels": [
      "MUI X",
      "core",
      "regression 🐛",
    ],
    "mergedAt": "2025-05-05T23:41:19Z",
    "number": 46051,
    "reviewers": [
      "Janpot",
      "Janpot",
      "jedwards1211",
      "jedwards1211",
      "oliviertassinari",
      "oliviertassinari",
      "oliviertassinari",
    ],
    "title": "[core] Fix internal version duplication",
    "url": "https://github.com/mui/material-ui/pull/46051",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-02T13:29:40Z",
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergedAt": "2025-05-06T15:03:19Z",
    "number": 46061,
    "reviewers": [
      "nadjakovacev",
    ],
    "title": "[website] Update values",
    "url": "https://github.com/mui/material-ui/pull/46061",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-03T14:05:12Z",
    "labels": [
      "enhancement",
      "scope: docs-infra",
    ],
    "mergedAt": "2025-05-05T17:27:16Z",
    "number": 46064,
    "reviewers": [
      "alexfauquette",
      "oliviertassinari",
      "oliviertassinari",
      "oliviertassinari",
    ],
    "title": "[docs-infra] Update feedback Node.js to v22",
    "url": "https://github.com/mui/material-ui/pull/46064",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-03T15:34:05Z",
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergedAt": "2025-05-07T17:54:29Z",
    "number": 46065,
    "reviewers": [
      "mapache-salvaje",
    ],
    "title": "[website] Fix CSS alignment",
    "url": "https://github.com/mui/material-ui/pull/46065",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-05T22:16:02Z",
    "labels": [
      "docs",
      "enhancement",
      "scope: docs-infra",
    ],
    "mergedAt": "2025-05-07T20:47:34Z",
    "number": 46090,
    "reviewers": [
      "mapache-salvaje",
    ],
    "title": "[docs] Remove oudated scaffoldhub ad",
    "url": "https://github.com/mui/material-ui/pull/46090",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-12T18:54:56Z",
    "labels": [
      "docs",
    ],
    "mergedAt": "2025-05-15T07:27:18Z",
    "number": 46135,
    "reviewers": [
      "0210shivam",
      "0210shivam",
      "ZeeshanTamboli",
      "ZeeshanTamboli",
    ],
    "title": "[docs] Fix GridLegacy docs order",
    "url": "https://github.com/mui/material-ui/pull/46135",
  },
]
`;

exports[`getUserCreatedPRListInPeriodByLabel > filters pull requests that exactly match provided label names (case-sensitive) 1`] = `
[
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-03T14:05:12Z",
    "labels": [
      "enhancement",
      "scope: docs-infra",
    ],
    "mergedAt": "2025-05-05T17:27:16Z",
    "number": 46064,
    "reviewers": [
      "alexfauquette",
      "oliviertassinari",
      "oliviertassinari",
      "oliviertassinari",
    ],
    "title": "[docs-infra] Update feedback Node.js to v22",
    "url": "https://github.com/mui/material-ui/pull/46064",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-05T22:16:02Z",
    "labels": [
      "docs",
      "enhancement",
      "scope: docs-infra",
    ],
    "mergedAt": "2025-05-07T20:47:34Z",
    "number": 46090,
    "reviewers": [
      "mapache-salvaje",
    ],
    "title": "[docs] Remove oudated scaffoldhub ad",
    "url": "https://github.com/mui/material-ui/pull/46090",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-12T18:54:56Z",
    "labels": [
      "docs",
    ],
    "mergedAt": "2025-05-15T07:27:18Z",
    "number": 46135,
    "reviewers": [
      "0210shivam",
      "0210shivam",
      "ZeeshanTamboli",
      "ZeeshanTamboli",
    ],
    "title": "[docs] Fix GridLegacy docs order",
    "url": "https://github.com/mui/material-ui/pull/46135",
  },
]
`;

exports[`getUserCreatedPRListInPeriodByLabel > filters pull requests that include provided label keywords (case-insensitive, partial match) 1`] = `
[
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-01T00:27:00Z",
    "labels": [
      "MUI X",
      "core",
      "regression 🐛",
    ],
    "mergedAt": "2025-05-05T23:41:19Z",
    "number": 46051,
    "reviewers": [
      "Janpot",
      "Janpot",
      "jedwards1211",
      "jedwards1211",
      "oliviertassinari",
      "oliviertassinari",
      "oliviertassinari",
    ],
    "title": "[core] Fix internal version duplication",
    "url": "https://github.com/mui/material-ui/pull/46051",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-02T13:29:40Z",
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergedAt": "2025-05-06T15:03:19Z",
    "number": 46061,
    "reviewers": [
      "nadjakovacev",
    ],
    "title": "[website] Update values",
    "url": "https://github.com/mui/material-ui/pull/46061",
  },
  {
    "author": "oliviertassinari",
    "createdAt": "2025-05-03T15:34:05Z",
    "labels": [
      "regression 🐛",
      "website",
    ],
    "mergedAt": "2025-05-07T17:54:29Z",
    "number": 46065,
    "reviewers": [
      "mapache-salvaje",
    ],
    "title": "[website] Fix CSS alignment",
    "url": "https://github.com/mui/material-ui/pull/46065",
  },
]
`;
